--- a/app/src/main/res/layout/item_daily_meal.xml
+++ b/app/src/main/res/layout/item_daily_meal.xml
@@ -23,6 +23,7 @@
                 android:background="#f40800"
                 android:clickable="true"
                 android:onClick="removeMealHandler"
+                android:tag="paramValue2"
                 android:textStyle="bold"
                 android:textSize="20dp" />
 
