--- a/app/src/main/res/layout/fragment_sublogin1.xml
+++ b/app/src/main/res/layout/fragment_sublogin1.xml
@@ -25,7 +25,8 @@
                 android:layout_marginStart="24dp"
                 app:layout_constraintRight_toRightOf="@+id/usernamefield"
                 app:layout_constraintHorizontal_bias="0.46"
-                android:layout_marginEnd="24dp" />
+                android:layout_marginEnd="24dp"
+                android:visibility="invisible" />
 
             <TextView
                 android:layout_width="368dp"
@@ -85,6 +86,17 @@
                 app:layout_constraintLeft_toLeftOf="@+id/skipbtn"
                 app:layout_constraintRight_toRightOf="@+id/skipbtn"
                 app:layout_constraintHorizontal_bias="1.0" />
+
+            <EditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:id="@+id/editText"
+                app:layout_constraintRight_toRightOf="@+id/usernamefield"
+                app:layout_constraintLeft_toLeftOf="@+id/usernamefield"
+                android:hint="password"
+                app:layout_constraintTop_toBottomOf="@+id/usernamefield" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
