--- a/app/src/main/res/layout/activity_select_saved_meal.xml
+++ b/app/src/main/res/layout/activity_select_saved_meal.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.kareem.macrotracker.Activities.AddSavedMealActivity">
+    tools:context="com.example.kareem.macrotracker.Activities.SelectSavedMealActivity">
 
     <LinearLayout
         android:orientation="vertical"
@@ -31,6 +31,14 @@
             android:layout_height="wrap_content"
             android:id="@+id/Label_SelectMeal"
             android:textAlignment="center" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/EditText_MealSearch"
+            android:hint="Search for a Meal" />
 
         <ListView
             android:layout_width="match_parent"
