--- a/app/src/main/res/layout/activity_create_complex_meal.xml
+++ b/app/src/main/res/layout/activity_create_complex_meal.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.kareem.macrotracker.Activities.CreateComplex">
+    tools:context="com.example.kareem.macrotracker.Activities.CreateComplexMealActivity">
 
     <TextView
         android:text="Total Nutrients"
