--- a/app/src/main/res/layout/activity_select_meal_type.xml
+++ b/app/src/main/res/layout/activity_select_meal_type.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.kareem.macrotracker.Activities.AddSavedMealActivity">
+    tools:context="com.example.kareem.macrotracker.Activities.SelectMealTypeActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,5 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_add_saved_meal_activity" />
+    <include layout="@layout/content_select_meal_type" />
+
 </android.support.design.widget.CoordinatorLayout>
