--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -20,7 +20,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="19dp">
 
-        <com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
+        <!--<com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:rcProgress="40"
@@ -87,7 +87,7 @@
             app:rcIconPaddingTop="0dp"
             app:rcIconPaddingBottom="0dp"
             app:rcIconBackgroundColor="@color/LightGrey"
-            android:id="@+id/Fat_ProgressBar" />
+            android:id="@+id/Fat_ProgressBar" />-->
 
         <TableLayout
             android:layout_width="match_parent"
