--- a/IIFYM_Tracker/src/main/res/layout/activity_user_macros.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_user_macros.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
     <TextView
         android:layout_width="match_parent"
@@ -50,7 +51,7 @@
             android:layout_gravity="center_vertical|center_horizontal" />
 
         <TextView
-            android:text="kcal"
+            android:text="@string/kcal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lblCalorieUnit"
@@ -93,7 +94,7 @@
             android:layout_gravity="center_vertical|center_horizontal" />
 
         <TextView
-            android:text="%"
+            android:text="@string/percent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lblPercent1"
@@ -136,7 +137,7 @@
             android:layout_gravity="center_vertical|center_horizontal" />
 
         <TextView
-            android:text="%"
+            android:text="@string/percent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lblPercent2"
@@ -179,7 +180,7 @@
             android:layout_gravity="center_vertical|center_horizontal" />
 
         <TextView
-            android:text="%"
+            android:text="@string/percent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lblPercent3"
@@ -190,40 +191,45 @@
 
     </LinearLayout>
 
-    <info.hoang8f.android.segmented.SegmentedGroup
-        android:id="@+id/seggroupUnitSystem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+    <LinearLayout
         android:orientation="horizontal"
-        app:sc_border_width="2dp"
-        app:sc_corner_radius="10dp"
-        android:layout_weight="0.10"
-        android:layout_gravity="center_vertical|center_horizontal" >
+        android:layout_width="match_parent"
+        android:layout_height="41dp"
+        android:id="@+id/linearlayoutPercentGrams"
+        android:layout_gravity="center_vertical|center_horizontal|center"
+        android:gravity="center_vertical|center_horizontal|center"
+        android:layout_weight="0.37">
 
-        <LinearLayout
+        <info.hoang8f.android.segmented.SegmentedGroup
+            android:id="@+id/seggroupDisplay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"></LinearLayout>
+            app:sc_border_width="2dp"
+            app:sc_corner_radius="10dp"
+            android:layout_gravity="center_vertical|center_horizontal" >
 
-        <RadioButton
-            android:id="@+id/rbtnMetric"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/metric"
-            style="@style/RadioButton"
-            android:checked="true"
-            android:layout_gravity="center_vertical|center_horizontal" />
+            <RadioButton
+                android:id="@+id/rbtnPercent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/radioBtnPercent"
+                style="@style/RadioButton"
+                android:checked="true"
+                android:layout_gravity="center_vertical|center_horizontal" />
 
-        <RadioButton
-            android:id="@+id/rbtnImperial"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/imperial"
-            style="@style/RadioButton"
-            android:layout_gravity="center_vertical|center_horizontal" />
+            <RadioButton
+                android:id="@+id/rbtnGrams"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/radioBtnGrams"
+                style="@style/RadioButton"
+                android:layout_gravity="center_vertical|center_horizontal" />
 
-    </info.hoang8f.android.segmented.SegmentedGroup>
+        </info.hoang8f.android.segmented.SegmentedGroup>
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
