--- a/IIFYM_Tracker/src/main/res/layout/activity_user_macros.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_user_macros.xml
@@ -12,11 +12,11 @@
         android:text="@string/userMacros_MacroRecommendation"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
-        android:paddingStart="@dimen/activity_horizontal_margin"
-        android:paddingEnd="@dimen/activity_horizontal_margin"
-        android:layout_height="75dp"
+        android:paddingStart="25dp"
+        android:paddingEnd="25dp"
         android:textColor="?attr/colorPrimary"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="15dp"
+        android:layout_height="50dp" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -63,9 +63,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/linearlayoutCalories"
-        android:paddingStart="@dimen/activity_horizontal_margin"
-        android:paddingEnd="@dimen/activity_horizontal_margin">
+        android:id="@+id/linearlayoutCalories">
 
         <TextView
             android:layout_width="match_parent"
@@ -73,10 +71,11 @@
             android:id="@+id/lblCalories"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:textColor="?attr/colorPrimary"
-            android:layout_weight="0.25"
             android:layout_gravity="center_vertical|center_horizontal"
             android:gravity="left|center_vertical"
-            android:text="@string/Calories" />
+            android:text="@string/Calories"
+            android:layout_weight="0.25"
+            android:paddingStart="@dimen/activity_horizontal_margin" />
 
         <EditText
             android:layout_width="match_parent"
@@ -87,10 +86,10 @@
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:textColor="?attr/colorPrimary"
             android:textColorHint="?android:attr/textColorHint"
-            android:layout_weight="0.25"
             android:layout_gravity="center_vertical|center_horizontal"
             android:gravity="center_vertical|center"
-            android:text="2000" />
+            android:text="2000"
+            android:layout_weight="0.25" />
 
         <TextView
             android:text="@string/kcal"
@@ -99,17 +98,19 @@
             android:id="@+id/lblCalorieUnit"
             android:textAppearance="@android:style/TextAppearance.Small"
             android:textColor="?attr/colorPrimary"
-            android:layout_weight="0.25"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:gravity="center_vertical|center" />
+            android:gravity="center_vertical|center"
+            android:layout_weight="0.25" />
 
-        <TextView
+        <Button
+            android:text="@string/reset"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/filler1"
+            android:id="@+id/btnReset"
+            android:background="@drawable/btn_iifym_style"
+            android:layout_gravity="center_vertical|center_horizontal|center"
+            android:gravity="center_vertical|center_horizontal|center"
             android:layout_weight="0.25"
-            android:gravity="center"
-            android:layout_gravity="center" />
+            android:layout_height="25dp" />
 
     </LinearLayout>
 
@@ -282,7 +283,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:id="@+id/linearlayoutTotal"
-        android:layout_height="40dp">
+        android:layout_height="50dp">
 
         <TextView
             android:layout_width="match_parent"
@@ -325,9 +326,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/filler2"
+            android:id="@+id/Filler"
             android:layout_weight="0.25"
-            android:gravity="center" />
+            android:gravity="center"
+            android:visibility="invisible" />
 
     </LinearLayout>
 
