--- a/IIFYM_Tracker/src/main/res/layout/activity_macro_settings_new.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_macro_settings_new.xml
@@ -10,7 +10,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="wrap_content"
