--- a/IIFYM_Tracker/src/main/res/layout/activity_view_saved_items.xml
+++ b/IIFYM_Tracker/src/main/res/layout/activity_view_saved_items.xml
@@ -1,42 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_add_daily_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Main.Old.activityViewSavedItems">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.example.kareem.IIFYM_Tracker.Activities.Main.Old.activityViewSavedItems">
 
-    <EditText
-        android:layout_width="360dp"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/etxtSearch"
-        android:hint="Search Meals ..."
-        android:drawableLeft="?android:attr/actionModeWebSearchDrawable"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <android.support.design.widget.FloatingActionButton
-        android:clickable="true"
-        app:srcCompat="@drawable/icon_adddailyitem"
-        android:id="@+id/addmeal_fab"
-        app:fabSize="mini"
-        android:layout_width="75dp"
-        app:elevation="10dp"
-        app:rippleColor="@android:color/black"
-        android:layout_height="75dp"
-        app:layout_constraintRight_toRightOf="@+id/listviewSavedItems"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/etxtSearch"
+            android:hint="Search ..."
+            android:drawableLeft="?android:attr/actionModeWebSearchDrawable"
+            tools:layout_editor_absoluteY="0dp"
+            tools:layout_editor_absoluteX="0dp" />
 
-    <ListView
+        <ListView
+            android:layout_width="match_parent"
+            android:id="@+id/listviewSavedItems"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="0dp"></ListView>
+
+    </LinearLayout>
+
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/fabAddNew"
         android:layout_width="wrap_content"
-        android:id="@+id/listviewSavedItems"
-        android:layout_height="0dp"
-        tools:layout_editor_absoluteX="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/etxtSearch"></ListView>
+        android:layout_height="wrap_content"
+        fab:fab_addButtonColorNormal="@color/colorPrimary"
+        fab:fab_addButtonColorPressed="@color/fabWhitePressed"
+        fab:fab_addButtonPlusIconColor="@color/fabWhite"
+        fab:fab_labelStyle="@style/menu_labels_style"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        fab:fab_addButtonSize="mini"
+        fab:fab_expandDirection="up">
 
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabAddNewFood"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_colorNormal="@color/colorPrimaryLight"
+            fab:fab_title="Add New Food"
+            fab:fab_colorPressed="@color/fabWhitePressed"
+            fab:fab_icon="@drawable/icon_food"
+            fab:fab_size="mini"/>
 
-</android.support.constraint.ConstraintLayout>
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabAddNewMeal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_colorNormal="@color/colorPrimaryLight"
+            fab:fab_title="Add New Meal"
+            fab:fab_colorPressed="@color/fabWhitePressed"
+            fab:fab_icon="@drawable/icon_meal"
+            fab:fab_size="mini"
+            style="imageButtonStyle"
+            android:scaleType="fitCenter"
+            android:background="@drawable/icon_meal" />
+
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
+
+</RelativeLayout>
